# nba-rookie

./: .gitignore  main.py  pyproject.toml
nba_rookie/: __init__.py  env.py  preprocessing.py  variable_selector.py
notebooks/: eda.ipynb
tests/: test_preprocessing.py
