[tool.poetry]
name = "nba-rookie"
version = "0.1.0"
description = ""
authors = ["Kleber dos Santos <kleber.santos@poatek.com>"]
readme = "README.md"
packages = [{include = "nba_rookie"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
jupyter = "^1.0.0"
sklearn = "^0.0.post1"
seaborn = "^0.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
